--- a/src/components/ListaDeCategorias/styles.css
+++ b/src/components/ListaDeCategorias/styles.css
@@ -15,7 +15,12 @@
     padding: 4px 8px;
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
 }
 .lista-categorias_input{
     margin-right: 20px;
 }
+
+.lista-categorias_item:hover{
+    text-decoration: line-through;
+  }
